Removed certs and ssl.

--- a/gateway/nginx/default.conf
+++ b/gateway/nginx/default.conf
@@ -1,3 +1,4 @@
+
 worker_processes  1;
 
 events {
@@ -17,12 +18,7 @@ http {
 
   server {
     listen 80;
-    listen 443 ssl;    
-    
-    # server_name seesee.space www.seesee.space;
-    
-    ssl_certificate /etc/ssl/certificate.crt; 
-    ssl_certificate_key /etc/ssl/private.key;
+    server_name localhost;
 
     lua_need_request_body on;
     lua_code_cache off;
