Removed test servers

--- a/gateway/nginx/default.conf
+++ b/gateway/nginx/default.conf
@@ -1,4 +1,3 @@
-
 worker_processes  1;
 
 events {
@@ -19,18 +18,13 @@ http {
   server {
     listen 80;
     server_name localhost;
-
-    lua_need_request_body on;
+      
     lua_code_cache off;
-
-    location /test {
-      default_type text/html;
-      content_by_lua_file /usr/local/openresty/lualib/conf/test.lua;
-    }
-   
-    location = /register {
-      access_by_lua_file /usr/local/openresty/lualib/conf/sign.lua;
-      proxy_pass http://users-api/api/v1/auth/register;
+    lua_need_request_body on;
+ 
+    location = /signup {
+      proxy_pass http://users-api/api/v1/user/signup;
+      # content_by_lua_file /validate.lua;
     }
 
   }
