--- a/gateway/nginx/default.conf
+++ b/gateway/nginx/default.conf
@@ -15,6 +15,11 @@ http {
     keepalive 20;
   }
 
+  upstream posts-api {
+    server posts-api:3050;
+    keepalive 20;
+  }
+
   server {
     listen 80;
     server_name localhost;
@@ -23,8 +28,34 @@ http {
     lua_need_request_body on;
  
     location = /signup {
+      # create and save user to db
       proxy_pass http://users-api/api/v1/user/signup;
-      # content_by_lua_file /validate.lua;
+      # generate a user token and set it in header
+      
+      # redirect to login or user home page ?
+    }
+
+    location = /signin {
+      # check input creds 
+      proxy_pass http://users-api/api/v1/user/signin;
+      # create and store jwt
+      content_by_lua_file /bearer.lua;
+      proxy_set_header Authorization $http_authorization;
+    }
+
+    location = /home {
+      # check for valid jwt
+      content_by_lua_file /verify.lua;
+      proxy_pass http://users-api/api/v1/user/home;
+    }
+
+    location = /gallery {
+      proxy_pass http://posts-api/api/v1/posts;
+    }
+
+    location = /create {
+      # check for valid jwt
+      proxy_pass http://posts-api/api/v1/posts/new;
     }
 
   }
