--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,6 +1,6 @@
 FROM openresty/openresty:1.19.3.1-focal
 
-# RUN apk add --no-cache git openssl
+RUN apt update && apt install -y git
 
 RUN rm -rf /etc/nginx/*
 
@@ -8,8 +8,6 @@ COPY nginx/* /etc/nginx/conf.d/
 COPY lua/* /usr/local/openresty/lualib/conf/
 
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
-# RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
-# RUN /usr/local/openresty/luajit/bin/luarocks install resty-mongol --server=http://rocks.moonscript.org
+RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
 
-# ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
 ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/conf.d/default.conf"]
