--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,7 @@ services:
   gateway:
     container_name: gateway
     build: .
-    volumes:
-      - ./gateway:/etc/nginx/:ro
+    # volumes:
+      # - ./gateway:/etc/nginx/:ro
+      # - './gateway/lua:/usr/local/openresty/lualib/conf'
       # - ./gateway/logs/:/var/log/nginx/ # Uncomment to save logs to respective files instead of the STDOUT
