--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -10,6 +10,9 @@ env             REDIS_SERVICES;
 env             JWT_SECRET;
 
 http {
+
+    lua_package_path "/usr/local/openresty/lualib/?.lua;;";
+
     include     conf.d/limits/hashes.conf;
     include     conf.d/limits/open_files_cache.conf;
     include     conf.d/limits/timeouts.conf;
