--- a/gateway/conf.d/locations/users.conf
+++ b/gateway/conf.d/locations/users.conf
@@ -1,10 +1,6 @@
 
 # User auth locatins
 
-location = /ping {
-    proxy_pass http://users-api/api/v1/auth/ping;
-}
-
 location = /me {
     proxy_pass http://users-api/api/v1/auth/me;
 }
@@ -22,5 +18,5 @@ location = /authenticate {
 #     include         proxy_params;
 #     rewrite         /auth/(.*) /$1  break;
 #     proxy_redirect  off;
-#     proxy_pass      $AUTH_CENTER/api/v1/auth/$1 break;
+#     proxy_pass      $AUTH_CENTER;
 # }
