--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -1,42 +1,39 @@
-
 # Redirect to the single correct one https://localhost
+
+# server {
+    # server_name             $hostname localhost;
+    # listen                  80;
+    # include                 conf.d/disable/access_logs.conf;
+    # return                  301 https://$host$request_uri;
+# }
+
+# server {
+    # server_name             www.$hostname www.localhost;
+    # listen                  80;
+    # listen                  443 ssl;
+    # include                 conf.d/enable/ssl.conf;
+    # include                 conf.d/disable/access_logs.conf;
+
+    # if ($host ~* ^www\.(?P<used_host>.*)$) {
+    #     return 301 https://$used_host$request_uri;
+    # }
+# }
 
 server {
     server_name             $hostname localhost;
-    listen                  80;
-    include                 conf.d/disable/access_logs.conf;
-    return                  301 https://$host$request_uri;
-}
-
-server {
-    server_name             www.$hostname www.localhost;
-    listen                  80;
-    listen                  443 ssl;
-    # include                 conf/Aenable/ssl.conf;
-    include                 conf.d/disable/access_logs.conf;
-
-    if ($host ~* ^www\.(?P<used_host>.*)$) {
-        return 301 https://$used_host$request_uri;
-    }
-}
-
-server {
-    lua_package_path        "/usr/local/openresty/lualib/?.lua;;";
+    # listen                  443 ssl http2;
     
+    listen                  80;
+    include                 conf.d/disable/access_logs.conf;
+
+    root                    /usr/local/openresty/nginx/html;
+
+    rewrite                 /pretty/url/    /controller/action/parameter1/parameter2/;
+
     lua_code_cache          off;
     lua_need_request_body   on;
 
-    server_name             $hostname localhost;
-    listen                  443 ssl http2;
-    # root                    /usr/share/nginx/html;
-
-    # set                     $remote_root    /var/www/html;
-    # set                     $remote_index   info.php;
-
-    # rewrite                 /info/          /info.php;
-    rewrite                 /pretty/url/    /controller/action/parameter1/parameter2/;
-
-    include                 conf.d/enable/ssl.conf;
+    # include                 conf.d/enable/ssl.conf;
     include                 conf.d/enable/uploads.conf;
     include                 conf.d/enable/gzip.conf;
 
@@ -46,6 +43,7 @@ server {
     include                 conf.d/locations/system.conf;
     include                 conf.d/locations/static.conf;
     include                 conf.d/locations/users.conf;
+    include                 conf.d/locations/posts.conf;
 
     include                 conf.d/locations/nginx_status.conf;
 }
