--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,34 +1,35 @@
-include         conf.d/system/os.conf;
-include         conf.d/system/processes.conf;
+include        conf.d/system/os.conf;
+include        conf.d/system/processes.conf;
 
 events {
-    include     conf.d/system/connections.conf;
+    include    conf.d/system/connections.conf;
 }
 
-env             USERS_SERVICES;
-env             REDIS_SERVICES;
-env             JWT_SECRET;
+env    USERS_SERVICES;
+env    POSTS_SERVICES;
+env    REDIS_SERVICES;
+env    JWT_SECRET;
 
 http {
 
     lua_package_path "/usr/local/openresty/lualib/?.lua;;";
 
-    include     conf.d/limits/hashes.conf;
-    include     conf.d/limits/open_files_cache.conf;
-    include     conf.d/limits/timeouts.conf;
+    include    conf.d/limits/hashes.conf;
+    include    conf.d/limits/open_files_cache.conf;
+    include    conf.d/limits/timeouts.conf;
 
-    include     conf.d/system/mime_types.conf;
-    include     conf.d/system/http.conf;
-    include     conf.d/system/security.conf;
+    include    conf.d/system/mime_types.conf;
+    include    conf.d/system/http.conf;
+    include    conf.d/system/security.conf;
 
-    include     conf.d/logs/formats.conf;
+    include    conf.d/logs/formats.conf;
 
-    include     conf.d/enable/error_logs.conf;
-    include     conf.d/enable/access_logs.conf;
+    include    conf.d/enable/error_logs.conf;
+    include    conf.d/enable/access_logs.conf;
 
-    include     conf.d/maps/*.conf;
-    include     conf.d/upstreams/*.conf;
-    include     conf.d/zones/*.conf;
+    include    conf.d/maps/*.conf;
+    include    conf.d/upstreams/*.conf;
+    include    conf.d/zones/*.conf;
 
-    include     servers/*.conf;
+    include    servers/*.conf;
 }
