--- a/gateway/conf.d/locations/users.conf
+++ b/gateway/conf.d/locations/users.conf
@@ -1,22 +1,21 @@
-
-# User auth locatins
+# User auth locations
 
 location = /me {
-    proxy_pass http://users-api/api/v1/auth/me;
+    proxy_pass      http://users-api/api/v1/auth/me;
+    # rewrite         /auth/(.*) /$1 break;
+    # proxy_redirect  off;
 }
 
 location = /register {
-    proxy_pass http://users-api/api/v1/auth/register;
+    proxy_pass      http://users-api/api/v1/auth/register;
+    # rewrite         /auth/(.*) /$1 break;
+    # proxy_redirect  off;
 }
 
 location = /authenticate {
-    proxy_pass http://users-api/api/v1/auth/authenticate;
+    proxy_pass      http://users-api/api/v1/auth/authenticate;
+    # rewrite         /auth/(.*) /$1 break;
+    # proxy_redirect  off;
 }
 
-# location ~ ^/auth/ {
-#     set_by_lua      $AUTH_CENTER 'return os.getenv("AUTH_CENTER")';
-#     include         proxy_params;
-#     rewrite         /auth/(.*) /$1  break;
-#     proxy_redirect  off;
-#     proxy_pass      $AUTH_CENTER;
-# }
+
