--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -31,7 +31,7 @@ server {
     lua_code_cache          off;
     lua_need_request_body   on;
 
-    include                 conf.d/enable/ssl.conf;
+    include                 conf/enable/ssl.conf;
     include                 conf/enable/uploads.conf;
     include                 conf/enable/gzip.conf;
 
