--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -1,28 +1,28 @@
 # Redirect to the single correct one https://localhost
 
+# server {
+#     server_name             $hostname localhost;
+#     listen                  80;
+#     include                 conf/disable/access_logs.conf;
+#     return                  301 https://$host$request_uri;
+# }
+
+# server {
+#     server_name             www.$hostname www.localhost;
+#     listen                  80;
+#     listen                  443 ssl;
+#     include                 conf/enable/ssl.conf;
+#     include                 conf/disable/access_logs.conf;
+
+#     if ($host ~* ^www\.(?P<used_host>.*)$) {
+#         return 301 https://$used_host$request_uri;
+#     }
+# }
+
 server {
     server_name             $hostname localhost;
     listen                  80;
-    include                 conf/disable/access_logs.conf;
-    return                  301 https://$host$request_uri;
-}
-
-server {
-    server_name             www.$hostname www.localhost;
-    listen                  80;
-    listen                  443 ssl;
-    include                 conf/enable/ssl.conf;
-    include                 conf/disable/access_logs.conf;
-
-    if ($host ~* ^www\.(?P<used_host>.*)$) {
-        return 301 https://$used_host$request_uri;
-    }
-}
-
-server {
-    server_name             $hostname localhost;
-    listen                  80;
-    listen                  443 ssl http2;
+    # listen                  443 ssl http2;
 
     root                    /usr/local/openresty/nginx/html;
 
@@ -31,7 +31,7 @@ server {
     lua_code_cache          off;
     lua_need_request_body   on;
 
-    include                 conf/enable/ssl.conf;
+    # include                 conf/enable/ssl.conf;
     include                 conf/enable/uploads.conf;
     include                 conf/enable/gzip.conf;
 
