--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ assets/*
 book/*
 .openresty/*
 .docker-labs/*
+.external-auth-server/*
+.micro-auth/*
+.resty-dev/*
+.resty-nginx-jwt/*
+.resty-toolkit/*
