--- a/gateway/conf/locations/users.conf
+++ b/gateway/conf/locations/users.conf
@@ -1,19 +1,35 @@
 # User auth locations
 
-location = /me {
-    proxy_pass    http://users-api/api/v1/users/me;
+location = /auth/me {
+    proxy_pass http://users-api/api/v1/users/me;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /signup {
-    proxy_pass    http://users-api/api/v1/users/signup;
+location = /auth/signup {
+    proxy_pass http://users-api/api/v1/users/signup;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /signin {
-    proxy_pass    http://users-api/api/v1/users/signin;
+location = /auth/signin {
+    proxy_pass http://users-api/api/v1/users/signin;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /signout {
-    proxy_pass    http://users-api/api/v1/users/signout;
+location = /auth/signout {
+    proxy_pass http://users-api/api/v1/users/signout;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
 
