--- a/gateway/conf/locations/posts.conf
+++ b/gateway/conf/locations/posts.conf
@@ -5,6 +5,7 @@ location = /posts {
 }
 
 location = /posts/create {
+    access_by_lua_file /bearer.lua;
     proxy_pass http://posts-api/api/v1/posts/create;
 }
 
