--- a/gateway/conf/locations/users.conf
+++ b/gateway/conf/locations/users.conf
@@ -1,6 +1,6 @@
 # User auth locations
 
-location = /auth/me {
+location = /user/me {
     proxy_pass http://users-api/api/v1/users/me;
     proxy_redirect off;
     proxy_set_header Host $host;
@@ -8,7 +8,7 @@ location = /auth/me {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /auth/signup {
+location = /user/signup {
     proxy_pass http://users-api/api/v1/users/signup;
     proxy_redirect off;
     proxy_set_header Host $host;
@@ -16,7 +16,7 @@ location = /auth/signup {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /auth/signin {
+location = /user/signin {
     proxy_pass http://users-api/api/v1/users/signin;
     proxy_redirect off;
     proxy_set_header Host $host;
@@ -24,7 +24,7 @@ location = /auth/signin {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /auth/signout {
+location = /user/signout {
     proxy_pass http://users-api/api/v1/users/signout;
     proxy_redirect off;
     proxy_set_header Host $host;
