--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -20,8 +20,9 @@
 # }
 
 server {
-    server_name             $hostname localhost;
+    server_name             localhost www.localhost;
     listen                  80;
+    # server_name             $hostname localhost;
     # listen                  443 ssl http2;
 
     root                    /usr/local/openresty/nginx/html;
