--- a/gateway/conf/enable/ssl.conf
+++ b/gateway/conf/enable/ssl.conf
@@ -16,8 +16,8 @@ ssl_ciphers                 "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
 add_header                  Strict-Transport-Security 'max-age=63072000; includeSubDomains; preload' always;
 
-ssl_certificate             /run/secrets/seesee.space.crt;
-ssl_certificate_key         /run/secrets/seesee.space.key;
+ssl_certificate             /run/secrets/cert.crt;
+ssl_certificate_key         /run/secrets/cert.key;
 
 # ssl_certificate             /etc/ssl/seesee.space.crt;
 # ssl_certificate_key         /etc/ssl/seesee.space.key;
