--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -2,12 +2,20 @@ FROM openresty/openresty:alpine-fat
 
 RUN apk add --no-cache git openssl
 
+RUN rm -rf /etc/nginx/* && \
+  mkdir -p /var/log/nginx && \
+  mkdir -p /run/secrets
+
 RUN echo $'[req] \n\
 distinguished_name = req_distinguished_name \n\
 x509_extensions = v3_req \n\
 prompt = no \n\
 [req_distinguished_name] \n\
 CN = *.seesee.space \n\
+countryName = US \n\
+stateOrProvinceName = Indiana \n\
+localityName = Evansville \n\
+0.organizationName = SeeSee \n\
 [v3_req] \n\
 keyUsage = keyEncipherment, dataEncipherment \n\
 extendedKeyUsage = serverAuth \n\
@@ -15,12 +23,8 @@ subjectAltName = @alt_names \n\
 [alt_names] \n\
 DNS.1 = *.seesee.space \n\
 DNS.2 = seesee.space' > openssl.cnf
-
-RUN rm -rf /etc/nginx/* && \
-  mkdir -p /var/log/nginx && \
-  mkdir -p /run/secrets/
  
-RUN openssl req -new -newkey rsa:2048 -sha1 -days 3650 -nodes -x509 -keyout /run/secrets/seesee.space.key -out /run/secrets/seesee.space.crt -config openssl.cnf
+RUN openssl req -new -newkey rsa:2048 -sha1 -days 3650 -nodes -x509 -keyout /run/secrets/cert.key -out /run/secrets/cert.crt -config openssl.cnf
 
 COPY conf /etc/nginx/conf
 COPY servers/* /etc/nginx/
