--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -3,28 +3,10 @@ FROM openresty/openresty:alpine-fat
 RUN apk add --no-cache git openssl
 
 RUN rm -rf /etc/nginx/* && \
-  mkdir -p /var/log/nginx && \
-  mkdir -p /run/secrets
+  mkdir -p /var/log/nginx
 
-RUN echo $'[req] \n\
-distinguished_name = req_distinguished_name \n\
-x509_extensions = v3_req \n\
-prompt = no \n\
-[req_distinguished_name] \n\
-CN = *.seesee.space \n\
-countryName = US \n\
-stateOrProvinceName = Indiana \n\
-localityName = Evansville \n\
-0.organizationName = SeeSee \n\
-[v3_req] \n\
-keyUsage = keyEncipherment, dataEncipherment \n\
-extendedKeyUsage = serverAuth \n\
-subjectAltName = @alt_names \n\
-[alt_names] \n\
-DNS.1 = *.seesee.space \n\
-DNS.2 = seesee.space' > openssl.cnf
- 
-RUN openssl req -new -newkey rsa:2048 -sha1 -days 3650 -nodes -x509 -keyout /run/secrets/cert.key -out /run/secrets/cert.crt -config openssl.cnf
+COPY ssl/seesee.space/seesee.space.crt /etc/ssl/seesee.space.crt
+COPY ssl/seesee.space/seesee.space.key /etc/ssl/seesee.space.key
 
 COPY conf /etc/nginx/conf
 COPY servers/* /etc/nginx/
@@ -36,8 +18,7 @@ RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
 RUN /usr/local/openresty/luajit/bin/luarocks install luacov
 
+RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stdout /var/log/nginx/bots.access.log
-RUN rm openssl.cnf
-RUN apk del openssl
 
 ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
