--- a/web-pwa/Dockerfile
+++ b/web-pwa/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.15.1-alpine as builder
+FROM node:14.15.1-alpine
 
 RUN mkdir -p /home/node/app/node_modules && \
   chown -R node:node /home/node/app
@@ -14,15 +14,4 @@ RUN yarn --pure-lockfile
 
 COPY . .
 
-RUN yarn build
-
-FROM nginx:1.19.5-alpine
-
-RUN rm /etc/nginx/conf.d/default.conf
-
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
-COPY --from=builder /home/node/app/build /usr/share/nginx/html
-
-EXPOSE 80
-
-# RUN chown -R nginx:nginx /usr/share/nginx/html/
+CMD [ "yarn", "start" ]
