--- a/web-pwa/nginx/nginx.conf
+++ b/web-pwa/nginx/nginx.conf
@@ -1,11 +1,21 @@
-# PWA app server
 
-server {
-  listen 3000;
+events {}
 
-  location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
+http {
+
+    include /etc/nginx/mime.types;
+
+    server {
+        listen 8080 default_server;  
+        root /usr/share/nginx/html;
+        index index.html index.htm index.nginx-debian.html;
+
+        location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 1s;
+        }
+
+        location / {
+            try_files $uri /index.html;
+        }    
+    }
 }
