--- a/web-pwa/Dockerfile.prod
+++ b/web-pwa/Dockerfile.prod
@@ -23,6 +23,6 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY --from=builder /home/node/app/build /usr/share/nginx/html
 
-EXPOSE 80
+EXPOSE 8080
 
-# RUN chown -R nginx:nginx /usr/share/nginx/html/
+RUN chown -R nginx:nginx /usr/share/nginx/html/
