--- a/gateway/conf/filters/trailing_index.conf
+++ b/gateway/conf/filters/trailing_index.conf
@@ -1,4 +1,5 @@
-# removes trailing "index" from all controllers
+# Removes trailing "index" from all controllers
+
 if ($request_uri ~* index/?$) {
     rewrite ^/(.*)/index/?$ /$1 permanent;
 }
