--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,13 +1,9 @@
-include conf/system/os.conf;
 include conf/system/processes.conf;
 
 events {
     include conf/system/connections.conf;
 }
 
-env USERS_API;
-env POSTS_API;
-env REDIS_AUTH;
 env JWT_SECRET;
 
 http {
@@ -26,7 +22,7 @@ http {
     include    conf/enable/error_logs.conf;
     include    conf/enable/access_logs.conf;
 
-    include    conf/maps/*.conf;
+    # include    conf/maps/*.conf;
     include    conf/upstreams/*.conf;
     include    conf/zones/*.conf;
 
