--- a/gateway/conf/filters/trailing_slashes.conf
+++ b/gateway/conf/filters/trailing_slashes.conf
@@ -1,4 +1,5 @@
-# removes trailing slashes (prevents SEO duplicate content issues)
+# Removes trailing slashes (prevents SEO duplicate content issues)
+
 if (!-d $request_filename) {
     rewrite ^/(.+)/$ /$1 permanent;
 }
