--- a/gateway/servers/default.conf
+++ b/gateway/servers/default.conf
@@ -1,13 +1,13 @@
 
 # Server definition to handle requests to undefined hosts
 
-server {
-  root           '';
-  server_name    '';
-  listen         80 default_server;
-  include        conf/disable/access_logs.conf;
+# server {
+#   root           '';
+#   server_name    '';
+#   listen         80 default_server;
+#   include        conf/disable/access_logs.conf;
 
-  location / {
-    return       444;
-  }  
-}
+#   location / {
+#     return       444;
+#   }  
+# }
