--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -1,47 +1,27 @@
-# Redirect to the single correct one https://localhost
-
-# server {
-    # server_name             $hostname localhost;
-    # listen                  80;
-    # include                 conf/disable/access_logs.conf;
-    # return                  301 https://$host$request_uri;
-# }
-
-# server {
-    # server_name             www.$hostname www.localhost;
-    # listen                  80;
-    # listen                  443 ssl;
-    # include                 conf/enable/ssl.conf;
-    # include                 conf/disable/access_logs.conf;
-
-    # if ($host ~* ^www\.(?P<used_host>.*)$) {
-    #     return 301 https://$used_host$request_uri;
-    # }
-# }
+# 
 
 server {
-    server_name             $hostname localhost;
+    server_name             default_server;
     listen                  80;
     # listen                  443 ssl http2;
     # root                    /usr/local/openresty/nginx/html;
 
-    rewrite                 /pretty/url/ /controller/action/parameter1/parameter2/;
+    # rewrite                 /pretty/url/ /controller/action/parameter1/parameter2/;
 
     lua_code_cache          off;
     lua_need_request_body   on;
 
     # include                 conf/enable/ssl.conf;
-    include                 conf/enable/uploads.conf;
-    include                 conf/enable/gzip.conf;
+    # include                 conf/enable/uploads.conf;
+    # include                 conf/enable/gzip.conf;
 
-    include                 conf/limits/methods.conf;
+    # include                 conf/limits/methods.conf;
     include                 conf/limits/rates.conf;
 
-    include                 conf/locations/system.conf;
+    # include                 conf/locations/system.conf;
     include                 conf/locations/static.conf;
-    
     include                 conf/locations/users.conf;
     include                 conf/locations/posts.conf;
-
+    
     include                 conf/locations/nginx_status.conf;
 }
